Revert "the editorconfig reformat"
This reverts commit ed6b54beadf8698aa16a0f6a0afaecce5b976c4d.